--- a/src/main-page/App.css
+++ b/src/main-page/App.css
@@ -13,6 +13,12 @@
   }
 }
 
+.main-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
